# gemson

./: .gitignore  EVALUATION_REPORT.md  Makefile  Modelfile  QUICKSTART.md  README.md  demo.py  diagram.mmd  diagram_dark.mmd  get_raw_text_baseline.py  get_raw_text_baseline_fair.py  requirements.txt  run_json_eval_baseline.py  test_new_android.py  test_recipe.py
data/: schema.py
data_pipeline/: client.go  client_test.go  generate_synthetic_data.py  go.mod  main.go  models.go  models_test.go  worker.go  writer.go
evals/: baseline_results.txt  gemson_results.txt  multimodal_ab_test.py  qualitative_analysis.py  run_evals.py  run_new_vision_test.py  sequential_ab_test.py  vision_baseline_test.py
serve/: Cargo.toml  start_llama_cpp.sh
serve/src/: main.rs
training/: config.yaml  deploy_runpod.py  train.py  train_unsloth.py
