[package]
name = "gemson-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1.40", features = ["full"] }
tower = { version = "0.4", features = ["limit", "buffer", "timeout"] }
tower-http = { version = "0.5", features = ["catch-panic", "trace", "timeout", "limit"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
http-body-util = "0.1"
